--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,15 +3,15 @@ version: '2.1'
 
 services:
 
-    postgres:
-      container_name: postgres
+    postgres_db:
+      container_name: postgres_db
       image: postgres
       ports:
         - '32271:5432'
       environment:
         POSTGRES_PASSWORD: airflow
-#      volumes:
-#        - ./pgsql_data:/var/lib/postgresql/data
+      volumes:
+        - ./pgsql_data:/var/lib/postgresql/data
 
 
     airflow:
@@ -20,20 +20,21 @@ services:
         ports:
           - '8080:8080'
         links:
-          - postgres
+          - postgres_db
         restart: always
         depends_on:
-            - postgres
+            - postgres_db
         environment:
-            - LOAD_EX=n
             - FERNET_KEY=46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
+            - AIRFLOW_CONN_POSTGRES_DB=postgres://postgres:airflow@postgres_db:5432/postgres
         volumes:
             - ./airflow_pipelines/dags:/usr/local/airflow/dags
             - ./airflow_pipelines/airflow.db:/usr/local/airflow/airflow.db
-        command: airflow connections --add --conn_id POSTGRES_DB --conn_type postgres --conn_host postgres --conn_password airflow --conn_port 5432 --conn_schema postgres
-
+        command: webserver
         healthcheck:
             test: ["CMD-SHELL", "[ -f /usr/local/airflow/airflow-webserver.pid ]"]
             interval: 30s
             timeout: 30s
             retries: 3
+
+
